--- a/views/user/plans/index.twig
+++ b/views/user/plans/index.twig
@@ -74,7 +74,7 @@
                                                 <h1 class="text-dark mb-5 fw-boldest">{{ plan.name }}<span> {% if plan.percentage == "0" or plan.percentage == "" %}
 
                                                         {% else %}
-                                                            <div class="badge badge-pill badge-secondary show text-white"> {{ plan.percentage }} %  Off</div>
+                                                            <div class="badge badge-pill badge-success show text-white" style="display: ruby-text"> {{ plan.percentage }} %  Off</div>
                                                         {% endif %}</span></h1>
                                                 <!--end::Title-->
                                                 <!--begin::Description-->
