--- a/views/user/chat/group_chat.twig
+++ b/views/user/chat/group_chat.twig
@@ -17,7 +17,7 @@
                         <!--begin::Separator-->
                         <span class="h-20px border-1 border-gray-200 border-start ms-3 mx-2 me-1">-</span>
                         <!--end::Separator-->
-                        <div class="text-muted">{{ chatWithUserInfo.fname|ucwords }} {{ chatWithUserInfo.lname|ucwords }}</div>
+                        <div class="text-muted">{{ chatWithUserInfo.fname }} {{ chatWithUserInfo.lname }}</div>
                         <!--end::Description-->
                     </h1>
                     <!--end::Title-->
@@ -97,9 +97,9 @@
                                             </div>
                                             <!--end::Details-->
                                             <!--begin::Last seen-->
-{#                                            <div class="d-flex flex-column align-items-end ms-2">#}
-{#                                                <span class="text-muted fs-7 mb-1">1 week</span>#}
-{#                                            </div>#}
+                                            {#                                            <div class="d-flex flex-column align-items-end ms-2">#}
+                                            {#                                                <span class="text-muted fs-7 mb-1">1 week</span>#}
+                                            {#                                            </div>#}
                                             <!--end::Last seen-->
                                         </div>
                                         <!--end::User-->
@@ -139,10 +139,11 @@
                                         <!--end::Avatar-->
 
                                         <!--begin::All users-->
-{#                                        <a href="#" class="symbol symbol-35px symbol-circle" data-bs-toggle="modal" data-bs-target="#kt_modal_view_users">#}
-{#                                            <span class="symbol-label fs-8 fw-bolder" data-bs-toggle="tooltip" data-bs-trigger="hover" title="View more users">+42</span>#}
-{#                                        </a>#}
-
+                                        {% if groupMembersCount != null %}
+                                            <a href="#" class="symbol symbol-35px symbol-circle" data-bs-toggle="modal" data-bs-target="#kt_modal_view_users">
+                                                <span class="symbol-label fs-8 fw-bolder" data-bs-toggle="tooltip" data-bs-trigger="hover" title="View more users">+{{ groupMembersCount }}</span>
+                                            </a>
+                                        {% endif %}
                                         <a href="#" class=" pl-4" >
                                             <h4 style="margin-left: 15px;" title="{{ chatWithUserInfo.fname }} {{ chatWithUserInfo.lname }}">{{ chatWithUserInfo.fname|ucwords }} {{ chatWithUserInfo.lname|ucwords }}</h4>
                                         </a>
@@ -154,11 +155,11 @@
                                 <!--end::Title-->
                                 <div class="card-toolbar">
                                     <!--begin::Menu-->
-{#                                    <div class="me-n3">#}
-{#                                        <a href="/call/ring/{{ user_id }}" class="btn btn-lg btn-icon btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">#}
-{#                                        <i class="bi bi-telephone-fill"></i>#}
-{#                                        </a>#}
-{#                                    </div>#}
+                                    {#                                    <div class="me-n3">#}
+                                    {#                                        <a href="/call/ring/{{ user_id }}" class="btn btn-lg btn-icon btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">#}
+                                    {#                                        <i class="bi bi-telephone-fill"></i>#}
+                                    {#                                        </a>#}
+                                    {#                                    </div>#}
                                     <div class="me-n3">
                                         <a href="/video-call/ring/{{ user_id }}" class="btn btn-lg btn-icon btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
                                             <i class="bi bi-telephone-fill"></i>
@@ -179,7 +180,6 @@
                                             <span class="visually-hidden">Loading...</span>
                                         </div>
                                     </div>
-
 
                                     <!--begin::Message(template for out)-->
                                     <div class="d-flex justify-content-end mb-10 d-none" data-kt-element="template-out">
@@ -286,7 +286,7 @@
                                 <!--begin::Heading-->
                                 <div class="text-center mb-13">
                                     <!--begin::Title-->
-                                    <h1 class="mb-3">Group Users</h1>
+                                    <h1 class="mb-3">Group Members</h1>
                                     <!--end::Title-->
                                 </div>
                                 <!--end::Heading-->
@@ -294,20 +294,25 @@
                                 <div class="mb-15">
                                     <!--begin::List-->
                                     <div class="mh-375px scroll-y me-n7 pe-7">
+                                        {% for groupMember in groupMembers %}
                                         <!--begin::User-->
                                         <div class="d-flex flex-stack py-5 border-bottom border-gray-300 border-bottom-dashed">
                                             <!--begin::Details-->
                                             <div class="d-flex align-items-center">
                                                 <!--begin::Avatar-->
                                                 <div class="symbol symbol-35px symbol-circle">
-                                                    <img alt="Pic" src="{{ env.APP_URL }}assets/dash/assets/media/avatars/300-6.jpg" />
+                                                    {% if groupMember.profile_image != null %}
+                                                        <img alt="Pic" src="{{ env.APP_URL }}uploads/profile/{{ groupMember.profile_image }}" />
+                                                    {% else %}
+                                                        <img alt="Pic" src="https://avatar.iran.liara.run/username?username={{ groupMember.fname }} {{ groupMember.lname }}" />
+                                                    {% endif %}
                                                 </div>
                                                 <!--end::Avatar-->
                                                 <!--begin::Details-->
                                                 <div class="ms-6">
                                                     <!--begin::Name-->
-                                                    <a href="#" class="d-flex align-items-center fs-5 fw-bolder text-dark text-hover-primary">Emma Smith
-                                                        <span class="badge badge-light fs-8 fw-bold ms-2">Team Member</span>
+                                                    <a href="#" class="d-flex align-items-center fs-5 fw-bolder text-dark text-hover-primary">{{ groupMember.fname|ucwords }} {{ groupMember.lname|ucwords }}
+                                                        <span class="badge badge-light fs-8 fw-bold ms-2">{{ groupMember.type|ucwords }}</span>
                                                     </a>
                                                     <!--end::Name-->
                                                 </div>
@@ -317,33 +322,8 @@
 
                                         </div>
                                         <!--end::User-->
-                                        <!--begin::User-->
-                                        <div class="d-flex flex-stack py-5 border-bottom border-gray-300 border-bottom-dashed">
-                                            <!--begin::Details-->
-                                            <div class="d-flex align-items-center">
-                                                <!--begin::Avatar-->
-                                                <div class="symbol symbol-35px symbol-circle">
-                                                    <span class="symbol-label bg-light-danger text-danger fw-bold">M</span>
-                                                </div>
-                                                <!--end::Avatar-->
-                                                <!--begin::Details-->
-                                                <div class="ms-6">
-                                                    <!--begin::Name-->
-                                                    <a href="#" class="d-flex align-items-center fs-5 fw-bolder text-dark text-hover-primary">Melody Macy
-                                                        <span class="badge badge-light fs-8 fw-bold ms-2">Team Member</span></a>
-                                                    <!--end::Name-->
 
-                                                </div>
-                                                <!--end::Details-->
-                                            </div>
-                                            <!--end::Details-->
-                                            <!--begin::Stats-->
-
-                                            <!--end::Stats-->
-                                        </div>
-                                        <!--end::User-->
-
-
+                                        {% endfor %}
                                     </div>
                                     <!--end::List-->
                                 </div>
@@ -1217,21 +1197,22 @@
 
     <script>
         $(document).ready(function () {
-            const userId = $('#chatWithUserID').val();
+            const groupId = $('#groupId').val();
             const userProfileImage = "{{ userProfileImage }}"
                 ? "{{ env.APP_URL }}uploads/profile/{{ userProfileImage }}"
                 : "https://avatar.iran.liara.run/username?username={{ loginName }}";
             //const wsUrl = 'wss://dev.techneketax.com/ws/';
             const wsUrl = 'ws://localhost:8000/';
             let ws;
+
             function initializeWebSocket() {
                 try {
                     ws = new WebSocket(wsUrl);
 
                     ws.onopen = function () {
                         console.log('WebSocket connected');
-                        if (userId) {
-                            getMessages(userId);
+                        if (groupId) {
+                            getGroupMessages(groupId);
                         }
                     };
 
@@ -1254,9 +1235,9 @@
 
             initializeWebSocket();
 
-            function getMessages(userId) {
+            function getGroupMessages(groupId) {
                 $.ajax({
-                    url: `/chat/messages/${userId}`,
+                    url: `/chat/messages/group/${groupId}`,
                     method: 'GET',
                     dataType: 'json',
                     success: function (response) {
@@ -1272,7 +1253,6 @@
                             let currentDate = '';
 
                             response.messages.forEach(message => {
-                                //const messageDate = new Date(message.timestamp).toLocaleDateString();
                                 const messageDate = timeAgo(message.timestamp);
                                 if (messageDate !== currentDate) {
                                     currentDate = messageDate;
@@ -1295,6 +1275,7 @@
                     }
                 });
             }
+
             function timeAgo(timestamp) {
                 const now = new Date();
                 const messageTime = new Date(timestamp);
@@ -1319,6 +1300,7 @@
                 }
                 return "just now";
             }
+
             function createOutgoingMessageElement(message) {
                 return `
             <div class="d-flex justify-content-end mb-10">
@@ -1364,14 +1346,14 @@
                 chatContainer.scrollTop(chatContainer[0].scrollHeight);
             }
 
-            function sendMessage() {
+            function sendMessage(groupId) {
                 const chatInput = $('[data-kt-element="input"]');
                 const chatMessageValue = chatInput.val().trim();
                 if (chatMessageValue === '') return;
 
                 const messageData = {
                     sender_id: '{{ loginId }}',
-                    receiver_id: userId,
+                    group_id: groupId,
                     message: chatMessageValue
                 };
 
@@ -1390,49 +1372,69 @@
                     console.error('Error sending message through WebSocket:', error);
                 }
             }
+
             $('[data-kt-element="input"]').on('keydown', function (event) {
                 if (event.key === 'Enter') {
                     event.preventDefault();
-                    sendMessage();
+                    sendMessage(groupId);
                 }
             });
+
             $('[data-kt-element="send"]').on('click', function () {
-                sendMessage();
+                sendMessage(groupId);
             });
         });
+
+        function timeAgo(timestamp) {
+            const now = new Date();
+            const messageTime = new Date(timestamp);
+            const diffInSeconds = Math.floor((now - messageTime) / 1000);
+
+            const intervals = {
+                year: 31536000,
+                month: 2592000,
+                day: 86400,
+                hour: 3600,
+                minute: 60,
+                second: 1
+            };
+
+            for (const interval in intervals) {
+                const diff = Math.floor(diffInSeconds / intervals[interval]);
+                if (diff > 1) {
+                    return `${diff} ${interval}s ago`;
+                } else if (diff === 1) {
+                    return `1 ${interval} ago`;
+                }
+            }
+            return "just now";
+        }
 
     </script>
     <script>
         //SEARCH
         $(document).ready(function () {
-            // Listen for keyup events on the search input
             $('input[name="search"]').on('keyup', function () {
-                // Get the search value and convert it to lowercase for case-insensitive comparison
                 const searchValue = $(this).val().toLowerCase().trim();
                 console.log("Search Value:", searchValue);
-
-                // Show all users if search value is empty
                 if (searchValue === "") {
                     $('#kt_chat_contacts_body .d-flex.flex-stack').show();
                     return;
                 }
-
-                // Iterate over each user block in the contacts list
                 $('#kt_chat_contacts_body .d-flex.flex-stack').each(function () {
                     const userName = $(this).attr('data-user-name').toLowerCase();
                     const userEmail = $(this).attr('data-user-email').toLowerCase();
-
-                    // Check if either the name or email contains the search value
                     if (userName.includes(searchValue) || userEmail.includes(searchValue)) {
-                        $(this).show();  // Show the element if it matches the search
+                        $(this).show();
                     } else {
-                        $(this).hide();  // Hide the element if it doesn't match the search
+                        $(this).hide();
                     }
                 });
             });
         });
-    </script>
 
+
+    </script>
 
 
 {% endblock %}
